--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
 ### STS ###
 .apt_generated
 .factorypath
@@ -5,9 +15,9 @@
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+*.idea
 *.iws
-*.iml
+.iml
 *.ipr
 
 ### NetBeans ###
@@ -26,5 +36,7 @@ bin/
 *.log
 target/
 
-!.project
-!.classpath
+### eclipse ###
+.project
+.classpath
+.gitignore
